# duq

./: .gitignore  LICENSE  README.md  dag_experiments.py  experiments.py  justfile  pyproject.toml  schema.sql
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml
src/duq/: __init__.py  cli.py  dag.py  sql_model.py
test/: __init__.py  test_sql_model.py
tests/: test_cli.py  test_dag.py  test_sql_model.py
