[project]
name = "duq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Okabintaro", email = "103938900+Okabintaro@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "sqlglot>=26.9.0",
]

[project.scripts]
duq = "duq:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.28.1",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]


[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "T201", # print
    "D104", # Missing docstring in public package, TODO: Remove
    # Allow TODOs for now
    "TD",
    "FIX",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = [
    "E402",
    "ANN201", # Ignore missing -> None in tests
    "S101", # Allow assert for pytest
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"
